<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_bg_login"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="22dp"
            app:srcCompat="@drawable/ic_arrow_drop_left_b" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="28dp"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/iv_gotoday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center_horizontal|bottom"
            android:padding="10dp"
            android:text="@string/huidaojintian"
            android:textColor="#FFFFFF"
            android:textSize="12dp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Sunday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Monday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Tuesday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Wednesday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Thursday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Friday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Saturday"
            android:textColor="@color/colorTextTime1"
            android:textSize="12dp"/>
    </LinearLayout>

    <com.taiqudong.android.enayeh.view.calendar.UserCalendarView
        android:id="@+id/vp_edit"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_gravity="center"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:scrollbars="none"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_edit_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButtonBg"
            android:gravity="center"
            android:text="@string/CANCEL"
            android:textColor="#666666"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_edit_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_login"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="@color/colorTextWhite"
            android:textSize="14dp"/>
    </LinearLayout>
</LinearLayout>