<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_login"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="62dp"
        android:src="@mipmap/ic_logoll"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcometo"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="26dp"
            android:layout_marginLeft="6dp"
            android:src="@mipmap/ic_enayeh"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/login_main_text"
        android:textColor="@color/colorTextSubtitle"
        android:textSize="16dp"/>

    <com.taiqudong.android.enayeh.view.DrawableHorizontalButton
        android:id="@+id/btn_fb"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_sbw_facebook"
        android:drawableLeft="@mipmap/ic_facebook"
        android:drawablePadding="10dp"
        android:lines="1"
        android:text="@string/FACEBOOK"
        android:textColor="@color/colorTextWhite"/>

    <com.taiqudong.android.enayeh.view.DrawableHorizontalButton
        android:id="@+id/btn_boginmain_google"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_sbw_google"
        android:drawableLeft="@mipmap/ic_google"
        android:drawablePadding="10dp"
        android:lines="1"
        android:text="@string/GOOGLE"
        android:textColor="@color/colorTextWhite"/>

    <TextView
        android:id="@+id/Skip"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/Skip"/>

</LinearLayout>