<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_bg_login"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="22dp"
            app:srcCompat="@drawable/ic_arrow_drop_left_b" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="28dp"
            android:gravity="center"
            android:text="@string/COLLECTION"
            android:textColor="#FFF"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginBottom="7dp"
            android:gravity="center_horizontal|bottom"
            android:paddingEnd="14dp"
            android:paddingStart="14dp"
            android:text="@string/edit"
            android:textColor="#FFF"
            android:textSize="14dp"
             />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:id="@+id/ll_collection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_collectionnull" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/noCollection"
                android:textColor="#999999"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_goto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_tv_gotocomment"
                android:paddingBottom="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/gotoCollection"
                android:textColor="#FF189F"
                android:textSize="14dp" />
        </LinearLayout>


        <com.taiqudong.android.enayeh.view.NestedRecycleView
            android:id="@+id/rv_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:scrollbars="none"
            android:visibility="visible" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#AEAEAE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_allselect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:src="@mipmap/ic_quan_d" />

            <TextView
                android:id="@+id/tv_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/allselect"
                android:textColor="@color/color1"
                android:textSize="16dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/delete"
                android:textColor="@color/colorMain2"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>