<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingEnd="20dp"
              android:paddingStart="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/shape_bg_dialog_title"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_dialog_function4_cancel"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_close_black_24dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Moodrecord"
            android:textColor="#FFF"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/tv_dialog_function4_ok"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/function4_hint"
            android:textColor="#666666"
            android:textSize="16dp"/>

        <com.taiqudong.android.enayeh.view.RadioBtnMain5
            android:id="@+id/re5main_f4"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>


</LinearLayout>